pagination, splash loading added
